Minor fixes; button spacing attempt 1

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 }
 
 #panel {
+    padding: .5rem;
     display: flex;
     justify-content: space-between;
     flex: 1;
@@ -34,6 +35,8 @@ body {
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #buttons div {
@@ -41,7 +44,11 @@ body {
     align-items: center;
     justify-content: center;
     width: 7.5rem;
-    height: 5rem;
+    height: 6rem;
+}
+
+#buttons #zero {
+    width: 15.25rem;
 }
 
 #sidebar {
@@ -50,6 +57,7 @@ body {
     justify-content: space-around;
     align-items: center;
 }
+
 #sidebar div {
     display: flex;
     align-items: center;
